--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,58 @@
-This is AJ's mainpage
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - GitHub Portfolio</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .project {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Your Name</h1>
+        <p>A brief introduction about yourself. You can mention your skills, interests, and what you do.</p>
+
+        <h2>GitHub Projects</h2>
+        <div class="project">
+            <h3>Project 1 Title</h3>
+            <p>A short description of the project.</p>
+            <a href="https://github.com/your-username/project-1-repo" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
+            <h3>Project 2 Title</h3>
+            <p>A short description of the project.</p>
+            <a href="https://github.com/your-username/project-2-repo" target="_blank">View on GitHub</a>
+        </div>
+        </div>
+</body>
+</html>
