--- a/Index.html
+++ b/Index.html
@@ -7,52 +7,94 @@
     <style>
         body {
             font-family: sans-serif;
+            background-color: #f4f4f9; /* Light and professional background color */
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
         }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 2rem 0;
+            width: 100%;
+        }
+
+        main {
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 2rem;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 800px;
+            margin-top: 2rem;
         }
-        h1, h2, h3 {
+
+        h1, h2 {
             color: #333;
         }
-        a {
-            color: #007bff;
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li a {
+            color: #0366d6; /* GitHub blue */
             text-decoration: none;
         }
-        a:hover {
+
+        li a:hover {
             text-decoration: underline;
         }
-        .project {
-            margin-bottom: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+
+        footer {
+            margin-top: auto;
+            color: #555;
+            font-size: 0.8rem;
+            padding: 1rem 0;
+            width: 100%;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Your Name</h1>
-        <p>A brief introduction about yourself. You can mention your skills, interests, and what you do.</p>
 
-        <h2>GitHub Projects</h2>
-        <div class="project">
-            <h3>Project 1 Title</h3>
-            <p>A short description of the project.</p>
-            <a href="https://github.com/your-username/project-1-repo" target="_blank">View on GitHub</a>
-        </div>
-        <div class="project">
-            <h3>Project 2 Title</h3>
-            <p>A short description of the project.</p>
-            <a href="https://github.com/your-username/project-2-repo" target="_blank">View on GitHub</a>
-        </div>
-        </div>
+    <header>
+        <h1>Your Name</h1>
+        <p>Software Developer</p> 
+    </header>
+
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Write a brief introduction about yourself here. Include your skills, interests, and any relevant experience. You can also mention your goals and aspirations as a developer.</p>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="your-github-project-link-1" target="_blank">Project 1 Title</a> - Short description of project 1</li>
+                <li><a href="your-github-project-link-2" target="_blank">Project 2 Title</a> - Short description of project 2</li>
+                <li><a href="your-github-project-link-3" target="_blank">Project 3 Title</a> - Short description of project 3</li>
+                <li><a href="your-github-project-link-4" target="_blank">Project 4 Title</a> - Short description of project 4</li>
+                <li><a href="your-github-project-link-5" target="_blank">Project 5 Title</a> - Short description of project 5</li>
+                <li><a href="your-github-project-link-6" target="_blank">Project 6 Title</a> - Short description of project 6</li>
+                <li><a href="your-github-project-link-7" target="_blank">Project 7 Title</a> - Short description of project 7</li>
+                <li><a href="your-github-project-link-8" target="_blank">Project 8 Title</a> - Short description of project 8</li>
+                <li><a href="your-github-project-link-9" target="_blank">Project 9 Title</a> - Short description of project 9</li>
+                <li><a href="your-github-project-link-10" target="_blank">Project 10 Title</a> - Short description of project 10</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Your Name</p>
+    </footer>
+
 </body>
 </html>
