--- a/Index.html
+++ b/Index.html
@@ -3,98 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - GitHub Portfolio</title>
+    <title>Your Name - Profile</title>
     <style>
         body {
-            font-family: sans-serif;
-            background-color: #f4f4f9; /* Light and professional background color */
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f8; /* Light, professional background */
+            color: #333;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
         }
-
-        header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-            width: 100%;
-        }
-
-        main {
-            background-color: #fff;
-            padding: 2rem;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        .container {
             width: 80%;
-            max-width: 800px;
-            margin-top: 2rem;
+            margin: 0 auto;
+            padding: 20px;
         }
-
         h1, h2 {
-            color: #333;
+            color: #22457a; /* Darker blue for headings */
         }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        li a {
-            color: #0366d6; /* GitHub blue */
+        a {
+            color: #3366cc; /* Standard blue for links */
             text-decoration: none;
         }
-
-        li a:hover {
+        a:hover {
             text-decoration: underline;
         }
-
-        footer {
-            margin-top: auto;
-            color: #555;
-            font-size: 0.8rem;
-            padding: 1rem 0;
-            width: 100%;
+        .profile-info {
+            margin-bottom: 30px;
+        }
+        .projects-link {
             text-align: center;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <div class="profile-info">
+            <h1>Your Name</h1>
+            <h2>Your Title/Profession</h2>
+            <p>Write a brief, engaging description of yourself here. Mention your skills, interests, and what you're passionate about. You can also include your career goals or the type of projects you enjoy working on.</p>
+            </div>
 
-    <header>
-        <h1>Your Name</h1>
-        <p>Software Developer</p> 
-    </header>
-
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Write a brief introduction about yourself here. Include your skills, interests, and any relevant experience. You can also mention your goals and aspirations as a developer.</p>
-        </section>
-
-        <section>
-            <h2>Projects</h2>
-            <ul>
-                <li><a href="your-github-project-link-1" target="_blank">Project 1 Title</a> - Short description of project 1</li>
-                <li><a href="your-github-project-link-2" target="_blank">Project 2 Title</a> - Short description of project 2</li>
-                <li><a href="your-github-project-link-3" target="_blank">Project 3 Title</a> - Short description of project 3</li>
-                <li><a href="your-github-project-link-4" target="_blank">Project 4 Title</a> - Short description of project 4</li>
-                <li><a href="your-github-project-link-5" target="_blank">Project 5 Title</a> - Short description of project 5</li>
-                <li><a href="your-github-project-link-6" target="_blank">Project 6 Title</a> - Short description of project 6</li>
-                <li><a href="your-github-project-link-7" target="_blank">Project 7 Title</a> - Short description of project 7</li>
-                <li><a href="your-github-project-link-8" target="_blank">Project 8 Title</a> - Short description of project 8</li>
-                <li><a href="your-github-project-link-9" target="_blank">Project 9 Title</a> - Short description of project 9</li>
-                <li><a href="your-github-project-link-10" target="_blank">Project 10 Title</a> - Short description of project 10</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Your Name</p>
-    </footer>
-
+        <div class="projects-link">
+            <a href="projects.html">View My Projects</a>
+        </div>
+    </div>
 </body>
 </html>
