--- a/projects.html
+++ b/projects.html
@@ -4,109 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Projects</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f8;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1 {
-            color: #22457a;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .project-box {
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin-bottom: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .project-box h2 {
-            margin-top: 0;
-            color: #22457a;
-        }
-        .project-box a {
-            color: #3366cc;
-            text-decoration: none;
-        }
-        .project-box a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>My Projects</h1>
+    <header>
+        <div class="container">
+            <h1>My Projects</h1>
+            <a href="index.html" class="back-button">Back to Profile</a>
+        </div>
+    </header>
 
-        <div class="project-box">
-            <h2>Project Name 1</h2>
-            <p>Brief description of the project. What does it do? What technologies did you use?</p>
-            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
-        </div>
-        
-        <div class="project-box">
-            <h2>Project Name 2</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
-        </div>
+    <section id="projects">
+        <div class="container">
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Project Name 1</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 3</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project3" target="_blank">View on GitHub</a>
-        </div>
-        
-        <div class="project-box">
-            <h2>Project Name 4</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project4" target="_blank">View on GitHub</a>
-        </div>
+                <div class="project-card">
+                    <h3>Project Name 2</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 5</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project5" target="_blank">View on GitHub</a>
-        </div>
+                 <div class="project-card">
+                    <h3>Project Name 3</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 6</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project6" target="_blank">View on GitHub</a>
-        </div>
+                 <div class="project-card">
+                    <h3>Project Name 4</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 7</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project7" target="_blank">View on GitHub</a>
-        </div>
+                 <div class="project-card">
+                    <h3>Project Name 5</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 8</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project8" target="_blank">View on GitHub</a>
-        </div>
+                <div class="project-card">
+                    <h3>Project Name 6</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 9</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project9" target="_blank">View on GitHub</a>
-        </div>
+                 <div class="project-card">
+                    <h3>Project Name 7</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-        <div class="project-box">
-            <h2>Project Name 10</h2>
-            <p>Brief description of the project.</p>
-            <a href="https://github.com/yourusername/project10" target="_blank">View on GitHub</a>
-        </div>
+                 <div class="project-card">
+                    <h3>Project Name 8</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
 
-    </div>
+                 <div class="project-card">
+                    <h3>Project Name 9</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
+
+                 <div class="project-card">
+                    <h3>Project Name 10</h3>
+                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                </div>
+                </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Your Name. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
