--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <h1>My Projects</h1>
-            <a href="index.html" class="back-button">Back to Profile</a>
+            <a href="Index.html" class="back-button">Back to Profile</a>
         </div>
     </header>
 
