--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Projects</title>
+    <title>Aniruddha Joshi (AJ) - Projects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,14 +18,14 @@
         <div class="container">
             <div class="project-grid">
                 <div class="project-card">
-                    <h3>Project Name 1</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>Predicting-Thermal-Comfort</h3>
+                    <p>A model that helps optimize energy usage in buildings while ensuring occupant comfort.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                 <div class="project-card">
-                    <h3>Project Name 2</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>Are Marriages Made in Heaven?</h3>
+                    <p>This project explores the question of whether marriages are truly "made in heaven" by examining correlations between divorce rates and various socioeconomic and demographic factors.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
