--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="profile-photo.jpg" alt="Aniruddha Joshi Profile Photo" class="profile-photo">
+            <img src="profile-photo.jpg.jpg" alt="Aniruddha Joshi Profile Photo" class="profile-photo">
             <h1>Aniruddha Joshi</h1>
             <h2>Solutions Architect - IT/OT Integration</h2>
         </div>
