--- a/projects.html
+++ b/projects.html
@@ -18,15 +18,15 @@
         <div class="container">
             <div class="project-grid">
                 <div class="project-card">
-                    <h3>Predicting-Thermal-Comfort</h3>
+                    <h3>1. Predicting-Thermal-Comfort</h3>
                     <p>A model that helps optimize energy usage in buildings while ensuring occupant comfort.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/1.-DSC680Project1-Predicting-Thermal-Comfort" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                 <div class="project-card">
-                    <h3>Are Marriages Made in Heaven?</h3>
+                    <h3>2. Are Marriages Made in Heaven?</h3>
                     <p>This project explores the question of whether marriages are truly "made in heaven" by examining correlations between divorce rates and various socioeconomic and demographic factors.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/2.-DCS530Project1---Are-merrages-made-in-Heaven-" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
