--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <img src="profile-photo.jpg.jpg" alt="Aniruddha Joshi Profile Photo" class="profile-photo">
-            <h1>Aniruddha Joshi</h1>
+            <h1>Aniruddha Joshi, PE</h1>
             <h2>Solutions Architect - IT/OT Integration</h2>
         </div>
     </header>
