--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,8 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 3</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>3. Identify fraudulent transactions by using Big Data Architecure</h3>
+                    <p>The project aims to identify fraudulent credit card transactions.  As we know, credit card transactions are a common risk in the finance industry, resulting in financial losses and customer dissatisfaction. The credit card transaction predictions are based on historical data, the user profile, and transaction location. This project uses the machine learning predictive model capable of identifying fraudulent transactions.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
