--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 4</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>4. Use of Predictive Analysis for Identification of Malicious Cyber Attacks on IoT Devices</h3>
+                    <p>The Internet of Things (IoT) has become an integral part of a life, connecting a wide range of devices to the internet for enhanced functionality, convenience, remote monitoring and optimization. From smart home appliances to industrial sensors, IoT devices collect, process, and exchange data. However, the these devices are prone to cyber attacks. This paper presents a data science approach to address this challenge, focusing on the development and evaluation of a predictive model to identify malicious cyberattacks on IoT devices. </p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
