--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 5</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>5. Predict sales using Time Series prediction model ARIMA</h3>
+                    <p>Using time series libraries like ARIMA, predict the value for the extended periods sales based on past performance.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
