--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
                 </div>
 
                 <div class="project-card">
-                    <h3>Project Name 6</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>6. Predicting impact of CO2 emission, temperature, windspeed and other parameter on sea level</h3>
+                    <p>Rising sea levels pose a significant threat to many costal countries around the world, with potential consequences including erosion, and salinization of land. Understanding the factors that influence sea level rise is crucial for predicting future impacts and developing effective mitigation strategies.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
