--- a/projects.html
+++ b/projects.html
@@ -54,8 +54,8 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 7</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>7. Predicting Cricket Players batting score</h3>
+                    <p>Predicting Cricket Players batting score based on past performance, age, location, pitch condition.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
