--- a/projects.html
+++ b/projects.html
@@ -60,8 +60,8 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 8</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <h3>8. Use of Clustring algorithums to identify ALS condition</h3>
+                    <p>Using K-means algorithum to identify the ALS condition. It aims to partition data points into distinct groups (clusters) where points within the same cluster are more similar to each other than to those in other clusters to identify the ALS condition. </p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
 
