--- a/projects.html
+++ b/projects.html
@@ -32,37 +32,37 @@
                  <div class="project-card">
                     <h3>3. Identify fraudulent transactions by using Big Data Architecture</h3>
                     <p>The project aims to identify fraudulent credit card transactions.  As we know, credit card transactions are a common risk in the finance industry, resulting in financial losses and customer dissatisfaction. The credit card transaction predictions are based on historical data, the user profile, and transaction location. This project uses the machine learning predictive model capable of identifying fraudulent transactions.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/3.-Identify-fraudulent-transactions-by-using-Big-Data-Architecture/upload/main" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
                     <h3>4. Use of Predictive Analysis for Identification of Malicious Cyber Attacks on IoT Devices</h3>
                     <p>The Internet of Things (IoT) has become an integral part of a life, connecting a wide range of devices to the internet for enhanced functionality, convenience, remote monitoring and optimization. From smart home appliances to industrial sensors, IoT devices collect, process, and exchange data. However, the these devices are prone to cyber attacks. This paper presents a data science approach to address this challenge, focusing on the development and evaluation of a predictive model to identify malicious cyberattacks on IoT devices. </p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/4.-DCS530Project1-Use-of-Predictive-Analysis-for-Identification-of-Malicious-Cyber-Attacks" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
                     <h3>5. Predict sales using Time Series prediction model ARIMA</h3>
                     <p>Using time series libraries like ARIMA, predict the value for the extended periods sales based on past performance.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/5.-Predict-sales-using-Time-Series-prediction-model-ARIMA" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                 <div class="project-card">
                     <h3>6. Predicting impact of CO2 emission, temperature, windspeed and other parameter on sea level</h3>
                     <p>Rising sea levels pose a significant threat to many costal countries around the world, with potential consequences including erosion, and salinization of land. Understanding the factors that influence sea level rise is crucial for predicting future impacts and developing effective mitigation strategies.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/6.-Predicting-impact-of-CO2-emission-temperature-windspeed-and-other-parameter-on-sea-level" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
                     <h3>7. Predicting Cricket Players batting score</h3>
                     <p>Predicting Cricket Players batting score based on past performance, age, location, pitch condition.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/7.-Predicting-Cricket-Players-batting-score" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
                     <h3>8. Use of Clustering algorithms to identify ALS condition</h3>
                     <p>Using K-means algorithum to identify the ALS condition. It aims to partition data points into distinct groups (clusters) where points within the same cluster are more similar to each other than to those in other clusters to identify the ALS condition. </p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/8.-Use-of-Clustering-algorithms-to-identify-ALS-condition" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
