--- a/projects.html
+++ b/projects.html
@@ -66,14 +66,14 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 9</h3>
+                    <h3>Clustering Countries for Targeted Socio-Economic and Health Interventions</h3>
                     <p>Short description of the project. Highlight the technologies used.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joshianiruddha/9-Clustering-Countries-for-Targeted-Socio-Economic-and-Health-Interventions" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
                     <h3>Project Name 10</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <p>Many countries face significant challenges in meeting the socio-economic and health needs of their populations. This project aims to categorize countries based on key indicators to identify specific needs and prioritize interventions in areas such as infrastructure, health, and education.</p>
                     <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
                 </div>
                 </div>
