--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <img src="profile-photo.jpg.jpg" alt="Aniruddha Joshi Profile Photo" class="profile-photo">
-            <h1>Aniruddha Joshi, PE</h1>
+            <h1>Aniruddha Joshi, PE, PMP</h1>
             <h2>Solutions Architect - IT/OT Integration</h2>
         </div>
     </header>
@@ -20,8 +20,8 @@
             <h2>About Me</h2>
             <p>
                 I am a Solutions Architect with expertise in OT/IT convergence, Industrial Cybersecurity, and Cloud Technologies. 
-                I have a strong command of various technologies, including Aspentech, Emerson, and Microsoft Azure, and excels in OT data acquisition, IT/OT integration, infrastructure design, and project delivery. 
-                I have successfully delivered projects involving the streaming of vast amounts of OT data to the cloud, enabling digital transformation initiatives. 
+                I have a strong command of various technologies, including Aspentech, Emerson DCS DeltaV, and Microsoft Azure, and excel in OT data acquisition, IT/OT integration, infrastructure design, and project delivery. 
+                I have successfully delivered DCS / DeltaV projects and OT/IT convergence projects involving the streaming of vast amounts of OT data to the cloud, enabling digital transformation initiatives. 
                 I am also pursuing a Master of Data Science degree.
             </p>
             <p>                
