--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 </div>
 
                  <div class="project-card">
-                    <h3>Clustering Countries for Targeted Socio-Economic and Health Interventions</h3>
+                    <h3>9. Clustering Countries for Targeted Socio-Economic and Health Interventions</h3>
                     <p>Short description of the project. Highlight the technologies used.</p>
                     <a href="https://github.com/joshianiruddha/9-Clustering-Countries-for-Targeted-Socio-Economic-and-Health-Interventions" class="button" target="_blank">View on GitHub</a>
                 </div>
