--- a/Index.html
+++ b/Index.html
@@ -34,8 +34,12 @@
     </section>
 
     <section id="projects-link">
-        <div class="container">
-            <a href="projects.html" class="button">View My Projects</a>
+        <div class="container">            
+            <li><a href="about.html" class="button">About Me</a></li>
+            <li><a href="contact.html" class="button">Contact</a></li>
+            <li><a href="projects.html" class="button">View My Projects</a></li>
+            <li><a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank" class="button">LinkedIn Profile</a></li>
+
         </div>
     </section>
 
