--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
             <h2>Contact Information</h2>
             <p>Please feel free to reach out to me through any of the following channels:</p>
             <ul>
-                <li>Email: joshianiruddha@outlook.com</li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">Your LinkedIn Profile</a></li>
+                <li>Email: <a href="joshianiruddha@outlook.com" target="_blank"></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank">LinkedIn Profile</a></li>
                 <li>GitHub: <a href="https://github.com/your-github-profile" target="_blank">Your GitHub Profile</a></li>
             </ul>
         </div>
