--- a/Index.html
+++ b/Index.html
@@ -35,10 +35,10 @@
 
     <section id="projects-link">
         <div class="container">            
-            <li><a href="about.html" class="button">About Me</a></li>
-            <li><a href="contact.html" class="button">Contact</a></li>
-            <li><a href="projects.html" class="button">View My Projects</a></li>
-            <li><a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank" class="button">LinkedIn Profile</a></li>
+            <a href="about.html" class="button">About Me</a>
+            <a href="contact.html" class="button">Contact</a>
+            <a href="projects.html" class="button">View My Projects</a>
+            <a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank" class="button">LinkedIn Profile</a>
 
         </div>
     </section>
