--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 I am a Solutions Architect with expertise in OT/IT convergence, Industrial Cybersecurity, and Cloud Technologies. 
                 I have a strong command of various technologies, including Aspentech, Emerson DCS DeltaV, and Microsoft Azure, and excel in OT data acquisition, IT/OT integration, infrastructure design, and project delivery. 
                 I have successfully delivered DCS / DeltaV projects and OT/IT convergence projects involving the streaming of vast amounts of OT data to the cloud, enabling digital transformation initiatives. 
-                I am also pursuing a Master of Data Science degree.
+                I am pursuing a Master of Data Science degree. 
             </p>
             <p>                
                  <ul>
