--- a/about.html
+++ b/about.html
@@ -18,10 +18,18 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                I am a Solutions Architect with expertise in OT/IT convergence, Industrial Cybersecurity, and Cloud Technologies.
-                I have a strong command of various technologies, including Aspentech, Emerson DCS DeltaV, and Microsoft Azure, and excel in OT data acquisition, IT/OT integration, infrastructure design, and project delivery. 
-                I have successfully delivered DCS / DeltaV projects and OT/IT convergence projects involving the streaming of vast amounts of OT data to the cloud, enabling digital transformation initiatives. 
-                I am also pursuing a Master of Data Science degree.
+                
+I am a results-oriented Lead IT/OT Integration Engineer with over 22 years of experience in the field.  I have a proven track record of success in designing, building, and deploying OT data infrastructure solutions.  I am also an expert in Emerson products and technologies.    
+
+In my current role at LyondellBasell Industries Ltd., I am responsible for IT/OT convergence.  I successfully designed, built, and deployed OT data infrastructure solutions with Aspen Inmation and delivered over 400,000 OT parameters per 10 seconds.  I also integrated data from numerous sites.    
+
+Before that, I worked at Emerson Automation Solutions for over 20 years.  In that role, I delivered enterprise solutions to various clients based on DeltaV DCS, AMS Device Manager, Machine Works, wireless instruments, Plantweb Optics (inmation Data Lake), virtualization, Mobile Worker, Plantweb Insight, AMS Asset Monitor, Machinery Manager, and others.  I also developed and delivered digital transformation roadmaps for major NA clients such as Chevron, Dow Chemicals, 3M and others (based on Emerson product portfolio).    
+
+I am a highly motivated and results-oriented individual with a strong work ethic.  I am also a team player and have excellent communication and interpersonal skills.  I am passionate about my work and always strive to exceed expectations.    
+
+I am currently pursuing a Master of Data Science degree from Bellevue University.  I am also a Certified Professional Engineer (PE), Project Management Professional (PMP), and CompTIA Network+ Certified.  
+
+
             </p>
             <p>                
                  <ul>
