--- a/Index.html
+++ b/Index.html
@@ -33,15 +33,16 @@
         </div>
     </section>
 
-    <section id="projects-link">
-        <div class="container">            
+<section id="projects-link">
+    <div class="container">
+        <div class="button-container"> <--- Added this div
             <a href="about.html" class="button">About Me</a>
             <a href="contact.html" class="button">Contact</a>
             <a href="projects.html" class="button">View My Projects</a>
             <a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank" class="button">LinkedIn Profile</a>
-
-        </div>
-    </section>
+        </div> <--- Closing the div
+    </div>
+</section>
 
     <footer>
         <div class="container">
