--- a/Index.html
+++ b/Index.html
@@ -35,12 +35,12 @@
 
 <section id="projects-link">
     <div class="container">
-        <div class="button-container"> <--- Added this div
+        <div class="button-container"> 
             <a href="about.html" class="button">About Me</a>
             <a href="contact.html" class="button">Contact</a>
             <a href="projects.html" class="button">View My Projects</a>
             <a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank" class="button">LinkedIn Profile</a>
-        </div> <--- Closing the div
+        </div> 
     </div>
 </section>
 
