--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <h2>Contact Information</h2>
             <p>Please feel free to reach out to me through any of the following channels:</p>
             <ul>
-                <li>Email: <a href="joshianiruddha@outlook.com" target="_blank">joshianiruddha@outlook.com</a></li>
+                <li>Email: <a href="mailto:joshianiruddha@outlook.com" target="_blank">joshianiruddha@outlook.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank">LinkedIn Profile</a></li>
                 <li>GitHub: <a href="https://github.com/your-github-profile" target="_blank">Your GitHub Profile</a></li>
             </ul>
