--- a/projects.html
+++ b/projects.html
@@ -67,14 +67,14 @@
 
                  <div class="project-card">
                     <h3>9. Clustering Countries for Targeted Socio-Economic and Health Interventions</h3>
-                    <p>Short description of the project. Highlight the technologies used.</p>
+                    <p>Many countries face significant challenges in meeting the socio-economic and health needs of their populations. This project aims to categorize countries based on key indicators to identify specific needs and prioritize interventions in areas such as infrastructure, health, and education.</p>
                     <a href="https://github.com/joshianiruddha/9-Clustering-Countries-for-Targeted-Socio-Economic-and-Health-Interventions" class="button" target="_blank">View on GitHub</a>
                 </div>
 
                  <div class="project-card">
-                    <h3>Project Name 10</h3>
-                    <p>Many countries face significant challenges in meeting the socio-economic and health needs of their populations. This project aims to categorize countries based on key indicators to identify specific needs and prioritize interventions in areas such as infrastructure, health, and education.</p>
-                    <a href="your-github-repo-link" class="button" target="_blank">View on GitHub</a>
+                    <h3>10 Predicting Customer Retention Based on Subscription Model</h3>
+                    <p>This project aims to predict customer churn for a subscription-based service and identify key factors contributing to churn, enabling targeted retention strategies to minimize revenue loss.  Customer churn occurs when customers end their relationship or subscription with a company. It measures how many customers stop using a company's products or services over time and affects revenue, growth, and customer retention.</p>
+                    <a href="https://github.com/joshianiruddha/10-Predicting-Customer-Retention-Based-on-Subscription-Model" class="button" target="_blank">View on GitHub</a>
                 </div>
                 </div>
         </div>
