--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <ul>
                 <li>Email: <a href="mailto:joshianiruddha@outlook.com" target="_blank">joshianiruddha@outlook.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/aniruddhacwa/" target="_blank">LinkedIn Profile</a></li>
-                <li>GitHub: <a href="https://github.com/your-github-profile" target="_blank">Your GitHub Profile</a></li>
+                <li>GitHub: <a href="https://github.com/your-github-profile" target="_blank">GitHub Profile</a></li>
             </ul>
         </div>
     </section>
